[package]
name = "aoc2019-wasm"
version = "0.1.0"
authors = ["Tyler Oalman <tyleroalman@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
path = "./wasm/lib.rs"

[dependencies]
aoc2019 = { path = ".." }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
lto = true
